LayoutTests:

Reviewed by Adele.

        - pixel test and updated results for http://bugs.webkit.org/show_bug.cgi?id=13153
          REGRESSION: Visual highlighting of pre-populated blank line in textarea is broken

        * editing/selection/doubleclick-crash-expected.checksum:
        * editing/selection/doubleclick-crash-expected.png:
        * fast/text/selection-hard-linebreak-expected.checksum: Added.
        * fast/text/selection-hard-linebreak-expected.png: Added.
        * fast/text/selection-hard-linebreak-expected.txt: Added.
        * fast/text/selection-hard-linebreak.html: Added.

WebCore:

        Reviewed by Adele.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13153
          REGRESSION: Visual highlighting of pre-populated blank line in textarea is broken

        - fix a bug where selecting across a soft line break did not highlight to
          the end of the first line if it contained skipped whitespace

        Test: fast/text/selection-hard-linebreak.html

        * rendering/InlineTextBox.cpp:
        (WebCore::InlineTextBox::selectionState): Changed to treat a selection that ends on the
        end of a hard line break as if it ends after the line break. Fixed the case of a selection
        that starts and ends in the same text object as the box but does not intersect it
        to return SelectionNone instead of selectionBoth.



Canonical link: https://commits.webkit.org/17203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20459 268f45cc-cd09-0410-ab3c-d52691b4dbfc